tried to make geojson smaller - no luck!

--- a/spatial_analysis/areal_weighting.ipynb
+++ b/spatial_analysis/areal_weighting.ipynb
@@ -3144,7 +3144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3154,7 +3154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -3195,7 +3195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -3318,7 +3318,7 @@
        "4       rural  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3338,7 +3338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3461,7 +3461,7 @@
        "4  Local Government  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3474,7 +3474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3485,7 +3485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3502,7 +3502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -3540,7 +3540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3551,17 +3551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Transform to epsg:3857\n",
-    "aw_pws_sdwa = aw_pws_sdwa.to_crs({'init': 'epsg:3857'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -3614,7 +3604,7 @@
        "      <td>24513.210106</td>\n",
        "      <td>0.414386</td>\n",
        "      <td>0.862450</td>\n",
-       "      <td>(POLYGON ((inf inf, inf inf, inf inf, inf inf,...</td>\n",
+       "      <td>(POLYGON ((497860.4602464174 196288.4292888343...</td>\n",
        "      <td>urban</td>\n",
        "      <td>SW</td>\n",
        "      <td>L</td>\n",
@@ -3634,7 +3624,7 @@
        "      <td>368.488183</td>\n",
        "      <td>0.116388</td>\n",
        "      <td>0.140297</td>\n",
-       "      <td>(POLYGON ((inf inf, inf inf, inf inf, inf inf,...</td>\n",
+       "      <td>(POLYGON ((515752.6858546621 202163.5393238475...</td>\n",
        "      <td>urban</td>\n",
        "      <td>GW</td>\n",
        "      <td>L</td>\n",
@@ -3654,7 +3644,7 @@
        "      <td>678.052804</td>\n",
        "      <td>0.106998</td>\n",
        "      <td>0.343254</td>\n",
-       "      <td>(POLYGON ((inf inf, inf inf, inf inf, inf inf,...</td>\n",
+       "      <td>(POLYGON ((358984.6680578727 246157.0587467105...</td>\n",
        "      <td>urban</td>\n",
        "      <td>GW</td>\n",
        "      <td>L</td>\n",
@@ -3674,7 +3664,7 @@
        "      <td>0.650936</td>\n",
        "      <td>0.135016</td>\n",
        "      <td>0.247196</td>\n",
-       "      <td>(POLYGON ((inf inf, inf inf, inf inf, inf inf,...</td>\n",
+       "      <td>(POLYGON ((382017.3487498079 264208.1571022005...</td>\n",
        "      <td>rural</td>\n",
        "      <td>GW</td>\n",
        "      <td>P</td>\n",
@@ -3694,7 +3684,7 @@
        "      <td>1.357856</td>\n",
        "      <td>0.135016</td>\n",
        "      <td>0.247196</td>\n",
-       "      <td>(POLYGON ((inf inf, inf inf, inf inf, inf inf,...</td>\n",
+       "      <td>(POLYGON ((383871.0728139255 228984.5435644306...</td>\n",
        "      <td>rural</td>\n",
        "      <td>GW</td>\n",
        "      <td>P</td>\n",
@@ -3718,11 +3708,11 @@
        "4  NJ0105002  8.502179e+05      5.493043      0.741649      1.357856   \n",
        "\n",
        "   perc_pov  perc_POC                                           geometry  \\\n",
-       "0  0.414386  0.862450  (POLYGON ((inf inf, inf inf, inf inf, inf inf,...   \n",
-       "1  0.116388  0.140297  (POLYGON ((inf inf, inf inf, inf inf, inf inf,...   \n",
-       "2  0.106998  0.343254  (POLYGON ((inf inf, inf inf, inf inf, inf inf,...   \n",
-       "3  0.135016  0.247196  (POLYGON ((inf inf, inf inf, inf inf, inf inf,...   \n",
-       "4  0.135016  0.247196  (POLYGON ((inf inf, inf inf, inf inf, inf inf,...   \n",
+       "0  0.414386  0.862450  (POLYGON ((497860.4602464174 196288.4292888343...   \n",
+       "1  0.116388  0.140297  (POLYGON ((515752.6858546621 202163.5393238475...   \n",
+       "2  0.106998  0.343254  (POLYGON ((358984.6680578727 246157.0587467105...   \n",
+       "3  0.135016  0.247196  (POLYGON ((382017.3487498079 264208.1571022005...   \n",
+       "4  0.135016  0.247196  (POLYGON ((383871.0728139255 228984.5435644306...   \n",
        "\n",
        "  urban_rural PRIMARY_SOURCE_CODE OWNER_TYPE_CODE  SERVICE_CONNECTIONS_COUNT  \\\n",
        "0       urban                  SW               L                       7775   \n",
@@ -3746,7 +3736,7 @@
        "4           Private  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3770,7 +3760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
